--- a/webapp/templates/menu.html
+++ b/webapp/templates/menu.html
@@ -1,5 +1,3 @@
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Новости Python</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,13 +9,32 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Главная страница</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('user.login') }}">Логин</a>
-            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Искать" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Искать</button>
         </form>
+        <ul class="navbar-nav">
+            {% if current_user.is_authenticated %}
+                <li class="nav-item">
+                    <span class="nav-link">Привет, {{ current_user.username }}!</a>
+                </li>
+                {% if current_user.is_admin %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin.admin_index') }}">Админка</a>
+                    </li>
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('user.logout') }}">Выйти</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('user.register') }}">Регистрация</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('user.login') }}">Войти</a>
+                </li>
+            {% endif %}
+        </ul>
     </div>
 </nav>
